# hass-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.vectordb  LICENSE  Makefile  README.md  README_INTEGRATION_TESTS.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  TOOL_REDUCTION_ANALYSIS.md  docker-compose.test.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docker.yml  docs-deploy.yml  docs-preview.yml  test-integration.yml  test.yml  validate.yml
app/: __main__.py  config.py  hass.py  prompts.py  run.py  server.py
app/api/: __init__.py  areas.py  automations.py  backups.py  base.py  blueprints.py  calendars.py  devices.py  diagnostics.py  entities.py  entity_suggestions.py  events.py  floors.py  helpers.py  integrations.py  labels.py  logbook.py  notifications.py  scenes.py  scripts.py  services.py  statistics.py  system.py  tags.py  templates.py  webhooks.py  zones.py
app/core/: __init__.py  client.py  decorators.py  errors.py  types.py
app/core/cache/: __init__.py  backend.py  config.py  decorator.py  file.py  invalidation.py  key_builder.py  manager.py  memory.py  metrics.py  redis.py  ttl.py
app/core/vectordb/: __init__.py  backend.py  chroma_backend.py  classification.py  config.py  description.py  embeddings.py  history.py  indexing.py  manager.py  relationships.py  search.py
app/tools/: __init__.py  areas.py  automations.py  backups.py  blueprints.py  calendars.py  devices.py  diagnostics.py  entities.py  entity_descriptions.py  entity_suggestions.py  events.py  helpers.py  integrations.py  logbook.py  notifications.py  query_processing.py  scenes.py  scripts.py  services.py  statistics.py  system.py  tags.py  templates.py  unified.py  webhooks.py  zones.py
docs/: GITHUB_PAGES_SETUP.md  automations.md  backups.md  best-practices.md  blueprints.md  calendars.md  configuration.md  devices-areas.md  entities.md  entity-descriptions.md  events.md  getting-started.md  helpers.md  index.md  integrations.md  logbook.md  notifications.md  prompts.md  query-processing.md  scenes-scripts.md  services.md  statistics-diagnostics.md  system.md  tags.md  templates.md  troubleshooting.md  vectordb-classification.md  vectordb-configuration.md  vectordb-history.md  vectordb-indexing.md  vectordb-relationships.md  vectordb-search.md  vectordb-testing.md  vectordb.md  webhooks.md  zones.md
docs/caching/: architecture.md  configuration.md  developer-guide.md  examples.md  faq.md  migration.md  performance.md  troubleshooting.md  user-guide.md
scripts/: check-and-fix-ci.sh  setup-dev.sh  wait-for-ha.sh
tests/: conftest.py  test_config.py  test_hass.py  test_server.py
tests/fixtures/: .gitignore  cache_fixtures.py  create_test_token.py
tests/fixtures/ha_config/: configuration.yaml  test-automations.yaml  test-scenes.yaml  test-scripts.yaml
tests/fixtures/ha_storage/: .gitkeep
tests/integration/: conftest.py  test_areas_real.py  test_cache_api_endpoints.py  test_cache_performance.py  test_mcp_server_integration.py  test_tools_entities.py  test_vectordb_entity_suggestions.py  test_vectordb_indexing_integration.py  test_vectordb_query_processing.py  test_vectordb_search_integration.py
tests/performance/: __init__.py  test_vectordb_performance.py
tests/unit/: test_api_areas.py  test_api_automations.py  test_api_backups.py  test_api_base.py  test_api_blueprints.py  test_api_calendars.py  test_api_devices.py  test_api_diagnostics.py  test_api_entities.py  test_api_events.py  test_api_helpers.py  test_api_integrations.py  test_api_logbook.py  test_api_notifications.py  test_api_scenes.py  test_api_scripts.py  test_api_services.py  test_api_statistics.py  test_api_system.py  test_api_tags.py  test_api_templates.py  test_api_webhooks.py  test_api_zones.py  test_cache_backend.py  test_cache_config.py  test_cache_decorator.py  test_cache_decorator_coverage.py  test_cache_dynamic_data.py  test_cache_error_handling.py  test_cache_excluded_endpoints.py  test_cache_file.py  test_cache_invalidation.py  test_cache_key_builder.py  test_cache_key_builder_coverage.py  test_cache_manager.py  test_cache_manager_coverage.py  test_cache_memory.py  test_cache_memory_coverage.py  test_cache_metrics.py  test_cache_redis.py  (+26 more)
